--- a/index1.html
+++ b/index1.html
@@ -825,13 +825,15 @@
                         <div class="col-lg-6 col-md-12">
                            <div class="hedingh3 text_align_left">
                               <h3>About</h3>
-                              <p> Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable sourc</p>
+                              <p> E-Learning Website: Discover about the universe of cells.</p>
+                               <p>Make by Teacher Lia.</p>
+                               <p>Sultan Idris Education University</p>
                            </div>
                         </div>
                         <div class="col-lg-6 col-md-12">
                            <div class="hedingh3 text_align_left">
                               <h3>Blog</h3>
-                              <p>Which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anythin</p>
+                              <p>TeacherLia.com</p>
                            </div>
                         </div>
                      </div>
@@ -862,7 +864,7 @@
                                     +01 1234567890
                                  </li>
                                  <li><i class="fa fa-envelope" aria-hidden="true"></i>
-                                    <a href="Javascript:void(0)">demo@gmail.com</a>
+                                    <a href="Javascript:void(0)">lyazailani@gmail.com</a>
                                  </li>
                               </ul>
                            </div>
@@ -886,7 +888,7 @@
                         </div>
                      </div>
                      <div class="col-md-12">
-                        <p>© 2020 All Rights Reserved. Design by <a href="https://html.design/"> Free html Templates</a></p>
+                        <p>© 2023 All Rights Reserved. Design by <a href="https://html.design/"> Teacher Lia</a></p>
                      </div>
                   </div>
                </div>
