--- a/service.html
+++ b/service.html
@@ -96,9 +96,9 @@
                      <p>Human : Cheek cells (400x magnification)</p>
                      <ul id="human">
                         <figure><img src="images/animalside.jpg" alt="#" style="width: 400px;"/></figure>
-                        <li>- Consists of nucleus, cytoplasm and cell membrane</li>
-                        <li>- Has an irregular shape</li>
-                        <li>- Smaller size</li>
+                        <li>1. Consists of nucleus, cytoplasm and cell membrane</li>
+                        <li>2. Has an irregular shape</li>
+                        <li>3. Smaller size</li>
                      </ul>
                      <br>
                      <button class="read_more" onclick="toggleHuman(this)">Read More</button>
@@ -111,9 +111,9 @@
                      <p>Vegetables : Onion cells (400x magnification)</p>
                      <ul id="plant">
                         <figure><img src="images/plantside.jpg" alt="#" style="width: 400px;"/></figure>
-                        <li>- Consists of nucleus, cytoplasm and cell membrane, cell wall, vacuole</li>
-                        <li>- Has a fixed shape</li>
-                        <li>- Larger size</li>
+                        <li>1. Consists of nucleus, cytoplasm and cell membrane, cell wall, vacuole</li>
+                        <li>2. Has a fixed shape</li>
+                        <li>3. Larger size</li>
                      </ul>
                      <br>                     
                      <button class="read_more" onclick="togglePlant(this)">Read More</button>
