--- a/about.html
+++ b/about.html
@@ -76,6 +76,7 @@
             <div class="row d_flex grig">
                <div class="col-md-6">
                   <div class="about_img">
+                     <p>The figure shown plant cell and animal cell structure</p>
                      <img src="images/note2.jpg" alt="#"/>
                      <center><figcaption>Figure 1: Plant Cell.</figcaption></center>
                      <br>
@@ -85,8 +86,8 @@
                </div>
                <div class="col-md-6 order">
                   <div class="titlepage text_align_left">
-                     <h2>LO: 2.1.5 Differentiate the types and the function of animal cells and plant cells</h2>
-                     <p>The figure shown plant cell and animal cell structure</p>
+                     <h2>LO: 2.1.3 Communicate about each structures in cells with their function as well as compare and contrast animal cell with plant cell</h2>
+                     
                      <a class="read_more" href="Note 1 Plant Cell and Animal Cell.pdf" target="_blank">Read more about Plant  and Animal Cell</a>
                      <a class="read_more" href="Note 2 What is Microscope.pdf" target="_blank">Read more about Microscope</a>
                   </div>
