--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                <div class="col-md-6 order">
                   <div class="titlepage text_align_left">
                      <h2>Learning standard: </h2> 
-                       <h2></h2> 2.1.3 Communicate about each structures in cells with their function as well as compare and contrast animal cell with plant cell</h2>
+                     <p> 2.1.3 Communicate about each structures in cells with their function as well as compare and contrast animal cell with plant cell</p2>
                      <a class="read_more" href="Note 1 Plant Cell and Animal Cell.pdf" target="_blank">Read more about Plant  and Animal Cell</a>
                      <a class="read_more" href="Note 2 What is Microscope.pdf" target="_blank">Read more about Microscope</a>
                   </div>
