--- a/about.html
+++ b/about.html
@@ -83,6 +83,9 @@
                      <a class="read_more" href="Note 1 Plant Cell and Animal Cell.pdf" target="_blank">Read more about Plant  and Animal Cell</a>
                      <a class="read_more" href="Note 2 What is Microscope.pdf" target="_blank">Read more about Microscope</a>
                   </div>
+                  <div class="about">
+         <div class="container_width">
+            <div class="row d_flex grig">
                <div class="col-md-6">
                   <div class="about_img">
                        <p>The figure shown plant cell and animal cell structure</p>
