--- a/about.html
+++ b/about.html
@@ -73,20 +73,18 @@
       <!-- about -->
       </div>
        <div class="about">
-         <div class="container_width">
-            <div class="row d_flex grig">
-               </div>
-               <div class="col-md-6 order">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12 order">
                   <div class="titlepage text_align_left">
                      <h2>Learning standard: </h2> 
                      <p> 2.1.3 Communicate about each structures in cells with their function as well as compare and contrast animal cell with plant cell</p2>
                      <a class="read_more" href="Note 1 Plant Cell and Animal Cell.pdf" target="_blank">Read more about Plant  and Animal Cell</a>
                      <a class="read_more" href="Note 2 What is Microscope.pdf" target="_blank">Read more about Microscope</a>
                   </div>
-                  <div class="about">
-         <div class="container_width">
-            <div class="row d_flex grig">
+            <div class="row">
                <div class="col-md-6">
+                  <div id="ho_shad" class="about_box text_align_left">
                   <div class="about_img">
                        <p>The figure shown plant cell and animal cell structure</p>
                      <img src="images/note2.jpg" alt="#"/>
