--- a/about.html
+++ b/about.html
@@ -83,14 +83,14 @@
                      <a class="read_more" href="Note 2 What is Microscope.pdf" target="_blank">Read more about Microscope</a>
                   </div>
             <div class="row">
-               <div class="col-md-6">
-                  <div id="ho_shad" class="about_box text_align_left">
+               <div class="col-md-4">
+                  <div id="ho_shad" class="about_box text_align_right">
                   <div class="about_img">
                        <p>The figure shown plant cell and animal cell structure</p>
-                     <img src="images/note2.jpg" alt="#"/>
+                     <figure><img src="images/note2.jpg" alt="#" style="width: 400px;"/></figure> 
                      <center><figcaption>Figure 1: Plant Cell.</figcaption></center>
                      <br>
-                     <img src="images/note3.jpg" alt="#"/>
+                     <figure><img src="images/note3.jpg" alt="#" style="width: 400px;"/></figure> 
                      <center><figcaption>Figure 2: Animal Cell.</figcaption></center>
                </div>
             </div>
