--- a/about.html
+++ b/about.html
@@ -77,6 +77,7 @@
                <div class="col-md-6">
                   <div class="about_img">
                      <img src="images/note2.jpg" alt="#"/>
+                      <p>The figure shown plant cell and animal cell structure</p>
                      <center><figcaption>Figure 1: Plant Cell.</figcaption></center>
                      <br>
                      <img src="images/note3.jpg" alt="#"/>
@@ -85,8 +86,8 @@
                </div>
                <div class="col-md-6 order">
                   <div class="titlepage text_align_left">
-                     <h2>LO: 2.1.5 Differentiate the types and the function of animal cells and plant cells</h2>
-                     <p>The figure shown plant cell and animal cell structure</p>
+                     <h2>Learning standard: </h2>
+                     <p> 2.1.5 Differentiate the types and the function of animal cells and plant cells </p>
                      <a class="read_more" href="Note 1 Plant Cell and Animal Cell.pdf" target="_blank">Read more about Plant  and Animal Cell</a>
                      <a class="read_more" href="Note 2 What is Microscope.pdf" target="_blank">Read more about Microscope</a>
                   </div>
