--- a/about.html
+++ b/about.html
@@ -85,9 +85,9 @@
                   </div>
                </div>
                <div class="col-md-6 order">
-                  <div class="titlepage text_align_left">
+                  <div class="titlepage text_align_center">
                      <h2>Learning standard: </h2>
-                     <p> 2.1.5 Differentiate the types and the function of animal cells and plant cells </p>
+                     <p> 2.1.3 Communicate about each structures in cells with their functions as well as compare and contrast animal cells with plant cells. </p>
                      <a class="read_more" href="Note 1 Plant Cell and Animal Cell.pdf" target="_blank">Read more about Plant  and Animal Cell</a>
                      <a class="read_more" href="Note 2 What is Microscope.pdf" target="_blank">Read more about Microscope</a>
                   </div>
