--- a/about.html
+++ b/about.html
@@ -83,6 +83,7 @@
                      <a class="read_more" href="Note 2 What is Microscope.pdf" target="_blank">Read more about Microscope</a>
                   </div>
                </div>
+               <div class="row">
                <div class="col-md-6">
                   <div class="about_img">
                      <p>The figure shown plant cell and animal cell structure</p>
