--- a/about.html
+++ b/about.html
@@ -87,10 +87,10 @@
                <div class="col-md-6">
                   <div class="about_img">
                      <p>The figure shown plant cell and animal cell structure</p>
-                     <img src="images/note2.jpg" alt="#"/>
+                     <img src="images/N1.jpg" alt="#"/>
                      <center><figcaption>Figure 1: Plant Cell.</figcaption></center>
                      <br>
-                     <img src="images/note3.jpg" alt="#"/>
+                     <img src="images/N2.jpg" alt="#"/>
                      <center><figcaption>Figure 2: Animal Cell.</figcaption></center>
                   </div>
             </div>
