--- a/about.html
+++ b/about.html
@@ -86,11 +86,12 @@
                <div class="row">
                <div class="col-md-6">
                   <div class="about_img">
+                     <div id="ho_shad" class="services_box text_align_right">
                      <p>The figure shown plant cell and animal cell structure</p>
-                     <img src="images/N1.jpg" alt="#"/>
+                     <img src="images/N1.jpg" alt="#" style="width:800px/>
                      <center><figcaption>Figure 1: Plant Cell.</figcaption></center>
                      <br>
-                     <img src="images/N2.jpg" alt="#"/>
+                     <img src="images/N2.jpg" alt="#" style="width:800px/> 
                      <center><figcaption>Figure 2: Animal Cell.</figcaption></center>
                   </div>
             </div>
