--- a/about.html
+++ b/about.html
@@ -88,10 +88,10 @@
                   <div class="about_img">
                      <div id="ho_shad" class="services_box text_align_right">
                      <p>The figure shown plant cell and animal cell structure</p>
-                     <img src="images/N1.jpg" alt="#" style="width:800px/>
+                     <img src="images/N1.jpg" alt="#"/>
                      <center><figcaption>Figure 1: Plant Cell.</figcaption></center>
                      <br>
-                     <img src="images/N2.jpg" alt="#" style="width:800px/> 
+                     <img src="images/N2.jpg" alt="#"/> 
                      <center><figcaption>Figure 2: Animal Cell.</figcaption></center>
                   </div>
             </div>
