--- a/about.html
+++ b/about.html
@@ -74,26 +74,23 @@
       <div class="about">
          <div class="container_width">
             <div class="row d_flex grig">
+               <div class="col-md-6">
+                  <div class="about_img">
+                     <img src="images/note2.jpg" alt="#"/>
+                     <center><figcaption>Figure 1: Plant Cell.</figcaption></center>
+                     <br>
+                     <img src="images/note3.jpg" alt="#"/>
+                     <center><figcaption>Figure 2: Animal Cell.</figcaption></center>
+                  </div>
                </div>
                <div class="col-md-6 order">
-                  <div class="titlepage text_align_center">
-                     <h2>Learning standard: </h2>
-                     <p> 2.1.3 Communicate about each structures in cells with their functions as well as compare and contrast animal cells with plant cells. </p>
+                  <div class="titlepage text_align_left">
+                     <h2>LO: 2.1.5 Differentiate the types and the function of animal cells and plant cells</h2>
+                     <p>The figure shown plant cell and animal cell structure</p>
                      <a class="read_more" href="Note 1 Plant Cell and Animal Cell.pdf" target="_blank">Read more about Plant  and Animal Cell</a>
                      <a class="read_more" href="Note 2 What is Microscope.pdf" target="_blank">Read more about Microscope</a>
                   </div>
                </div>
-               <div class="row">
-               <div class="col-md-6">
-                  <div class="about_img">
-                     <div id="ho_shad" class="services_box text_align_right">
-                     <p>The figure shown plant cell and animal cell structure</p>
-                     <img src="images/N1.jpg" alt="#"/>
-                     <center><figcaption>Figure 1: Plant Cell.</figcaption></center>
-                     <br>
-                     <img src="images/N2.jpg" alt="#"/> 
-                     <center><figcaption>Figure 2: Animal Cell.</figcaption></center>
-                  </div>
             </div>
          </div>
       </div>
