--- a/about.html
+++ b/about.html
@@ -86,8 +86,11 @@
                </div>
                <div class="col-md-6 order">
                   <div class="titlepage text_align_left">
-                     <h2>Learning standard:</h2>
-                     <p>2.1.3 Communicate about each structures in cells with their functions as well as compare and contrast animal cells with plant cells.</p>
+                     <h2>Learning Objectives:</h2>
+                     <p>Student should be able to:</p>
+                     <p>1. Determine the basic structure of animal and plant cells.</p>
+                     <p>2. Draw and identify the complete structure of animal and plant cells.</p>
+                     <p>3. List every similarity and differences that exists between animal and plant cells.</p>
                      <a class="read_more" href="Note 1 Plant Cell and Animal Cell.pdf" target="_blank">Read more about Plant  and Animal Cell</a>
                      <a class="read_more" href="Note 2 What is Microscope.pdf" target="_blank">Read more about Microscope</a>
                   </div>
